ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgp-skymoore-com
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "pgp.skymoore.com"
spec:
  ingressClassName: nginx
  rules:
    - host: pgp.skymoore.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
            path: /
  tls:
    - hosts:
      - pgp.skymoore.com
      secretName: tls-cert
